[package]
name = "ini-doc"
version = "0.1.1"
edition = "2024"
publish = true
description = "A Rust library for reading and writing INI files with support for comments and sections."
repository = "https://github.com/Orvaxis/ini-doc"
keywords = [
    "ini",
    "round-trip",
]
license = "MIT"

[features]
default = [
    "ordered",
]
ordered = [
    "dep:indexmap",
]
[dependencies]
indexmap = { version = "^2", optional = true }
ini-roundtrip = "^0.2"
thiserror = "^2"
