[package]
name = "ini-doc"
version = "0.2.0"
edition = "2024"
publish = true
description = "A Rust library for reading and writing INI files with support for comments and sections."
repository = "https://github.com/Orvaxis/ini-doc"
keywords = [
    "ini",
    "round-trip",
]
license = "MIT"


[dependencies]
indexmap =  "^2"
ini-roundtrip = "^0.2"
thiserror = "^2"
